--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask>=2.0.0
-Flask-SocketIO>=5.0.0
-python-dotenv>=0.19.0
-requests>=2.26.0
-eventlet>=0.33.0  # Add this for production server
-python-dateutil>=2.8.2
+eventlet
+flask
+flask-socketio
+python-dotenv
+requests
+gunicorn
