--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-eventlet
-flask
-flask-socketio
-python-dotenv
-requests
-gunicorn
+flask-cors==4.0.0
+eventlet==0.33.3
+flask==3.0.2
+flask-socketio==5.3.6
+python-dotenv==1.0.0
+requests==2.31.0
+gunicorn==21.2.0
